--- a/.gitignore
+++ b/.gitignore
@@ -15,29 +15,34 @@ Thumbs.db
 
 # Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+package-lock.json
+yarn.lock
 
-# Build output
-dist/
-build/
-*.min.js
-*.min.css
-
-# Environment variables
+# Environment files
 .env
 .env.local
 .env.*.local
 
 # Debug logs
-debug.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Optional: Uncomment if you're using these
-# .sass-cache/
-# *.css.map
-# *.sass.map
-# *.scss.map 
+# Build/Generate output
+dist/
+build/
+*.min.js
+*.min.css
+
+# Cache directories
+.cache/
+.temp/
+
+# Test coverage
+coverage/
+
+# Temporary files
+*.log
+*.tmp
+.tmp/
+temp/ 
